--- a/.github/workflows/update-and-deploy.yml
+++ b/.github/workflows/update-and-deploy.yml
@@ -108,13 +108,13 @@ jobs:
 
       - name: Generate application properties file for zaqlick
         env:
-          DB_URL: ${{ secrets.ZAQLICK_DB_URL }}
-          DB_USER: ${{ secrets.ZAQLICK_DB_USER }}
-          DB_PASSWORD: ${{ secrets.ZAQLICK_DB_PASSWORD }}
-          APP_BASE_URL: ${{ vars.ZAQLICK_APP_BASE_URL }}
-          MAILGUN_API_KEY: ${{ secrets.ZAQLICK_MAILGUN_API_KEY }}
-          MAILGUN_DOMAIN: ${{ vars.ZAQLICK_MAILGUN_DOMAIN }}
-          MAILGUN_FROM_EMAIL: ${{ vars.ZAQLICK_MAILGUN_FROM_EMAIL }}
+          ZAQLICK_DB_URL: ${{ secrets.ZAQLICK_DB_URL }}
+          ZAQLICK_DB_USER: ${{ secrets.ZAQLICK_DB_USER }}
+          ZAQLICK_DB_PASSWORD: ${{ secrets.ZAQLICK_DB_PASSWORD }}
+          ZAQLICK_APP_BASE_URL: ${{ vars.ZAQLICK_APP_BASE_URL }}
+          ZAQLICK_MAILGUN_API_KEY: ${{ secrets.ZAQLICK_MAILGUN_API_KEY }}
+          ZAQLICK_MAILGUN_DOMAIN: ${{ vars.ZAQLICK_MAILGUN_DOMAIN }}
+          ZAQLICK_MAILGUN_FROM_EMAIL: ${{ vars.ZAQLICK_MAILGUN_FROM_EMAIL }}
         run: |
           if [ -f zaqlick-app/application.yaml.template ]; then
             envsubst < zaqlick-app/application.yaml.template > zaqlick-app/application.yaml
