--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,7 +61,7 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: prod
     volumes:
-      - .zaqlick-app/application.yaml:/workspace/application-prod.yaml
+      - ./zaqlick-app/application.yaml:/workspace/application-prod.yaml
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
       interval: 30s
