--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,13 @@ services:
     container_name: traefik
     image: traefik:v3.6
     command:
-      - --log.level=INFO
+      - --log.level=DEBUG
       - --accesslog=true
       - --api.dashboard=false
       - --entrypoints.web.address=:80
       - --entrypoints.websecure.address=:443
       - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
       - --certificatesresolvers.le.acme.email=xp.vit.blr@gmail.com
       - --certificatesresolvers.le.acme.storage=/letsencrypt/acme.json
       - --certificatesresolvers.le.acme.httpchallenge=true
@@ -24,7 +25,10 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./letsencrypt:/letsencrypt
+    networks:
+      - web
     restart: unless-stopped
+
   zaqlick-social-data-parser:
     container_name: data-parser
     image: xpvit/zaqlick-social-data-parser:${ZAQLICK_SOCIAL_DATA_PARSER_VERSION:-latest}
@@ -41,12 +45,14 @@ services:
       - "traefik.http.routers.parser-http.middlewares=redirect-to-https"
     ports:
       - "8080:8080"
+    networks:
+      - web
     restart: unless-stopped
     environment:
       SPRING_PROFILES_ACTIVE: prod
     volumes:
       - ./stock-app/application.yaml:/workspace/application-prod.yaml
-    # Uncomment and adjust if you need persistent storage
+
   zaqlick-app:
     container_name: zaqlick-app
     image: api.repoflow.io/xpvitblr-504/zaqlick-app/zaqlick-app:${ZAQLICK_APP_VERSION:-latest}
@@ -63,6 +69,8 @@ services:
       - "traefik.http.routers.zaqlick-http.middlewares=redirect-to-https"
     ports:
       - "8889:8080"
+    networks:
+      - web
     restart: unless-stopped
     environment:
       SPRING_PROFILES_ACTIVE: prod
@@ -74,3 +82,7 @@ services:
       timeout: 10s
       retries: 5
       start_period: 30s
+
+networks:
+  web:
+    driver: bridge
