--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - --entrypoints.websecure.address=:443
       - --providers.docker=true
       - --providers.docker.exposedbydefault=false
+      - --providers.docker.network=deploy_web
       - --certificatesresolvers.le.acme.email=xp.vit.blr@gmail.com
       - --certificatesresolvers.le.acme.storage=/letsencrypt/acme.json
       - --certificatesresolvers.le.acme.httpchallenge=true
@@ -34,6 +35,7 @@ services:
     image: xpvit/zaqlick-social-data-parser:${ZAQLICK_SOCIAL_DATA_PARSER_VERSION:-latest}
     labels:
       - "traefik.enable=true"
+      - "traefik.docker.network=deploy_web"
       # Service definition
       - "traefik.http.services.parser.loadbalancer.server.port=8080"
       # HTTPS router
@@ -60,6 +62,7 @@ services:
     image: api.repoflow.io/xpvitblr-504/zaqlick-app/zaqlick-app:${ZAQLICK_APP_VERSION:-latest}
     labels:
       - "traefik.enable=true"
+      - "traefik.docker.network=deploy_web"
       # Service definition
       - "traefik.http.services.zaqlick.loadbalancer.server.port=8080"
       # HTTPS router
