--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - --entrypoints.websecure.address=:443
       - --providers.docker=true
       - --providers.docker.exposedbydefault=false
-      - --providers.docker.network=deploy_web
+      - --providers.docker.network=traefik_web
       - --certificatesresolvers.le.acme.email=xp.vit.blr@gmail.com
       - --certificatesresolvers.le.acme.storage=/letsencrypt/acme.json
       - --certificatesresolvers.le.acme.httpchallenge=true
@@ -35,7 +35,7 @@ services:
     image: xpvit/zaqlick-social-data-parser:${ZAQLICK_SOCIAL_DATA_PARSER_VERSION:-latest}
     labels:
       - "traefik.enable=true"
-      - "traefik.docker.network=deploy_web"
+      - "traefik.docker.network=traefik_web"
       # Service definition
       - "traefik.http.services.parser.loadbalancer.server.port=8080"
       # HTTPS router
@@ -62,7 +62,7 @@ services:
     image: api.repoflow.io/xpvitblr-504/zaqlick-app/zaqlick-app:${ZAQLICK_APP_VERSION:-latest}
     labels:
       - "traefik.enable=true"
-      - "traefik.docker.network=deploy_web"
+      - "traefik.docker.network=traefik_web"
       # Service definition
       - "traefik.http.services.zaqlick.loadbalancer.server.port=8080"
       # HTTPS router
@@ -83,13 +83,8 @@ services:
       SPRING_PROFILES_ACTIVE: prod
     volumes:
       - ./zaqlick-app/application.yaml:/workspace/application-prod.yaml
-    healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 30s
 
 networks:
   web:
+    name: traefik_web
     driver: bridge
