--- a/.github/workflows/update-and-deploy.yml
+++ b/.github/workflows/update-and-deploy.yml
@@ -141,19 +141,46 @@ jobs:
             "docker login -u \"${DOCKER_USER}\" -p \"${DOCKER_PASSWORD}\" \"${DOCKER_HOST}\""
 
       - name: Deploy on EC2
+        env:
+          VERSION_VAR: ${{ steps.vars.outputs.version_var }}
         run: |
-          ssh -i ~/.ssh/id_ed25519 "${{ vars.EC2_USER }}@${{ vars.EC2_HOST }}" <<'EOF'
+          ssh -i ~/.ssh/id_ed25519 "${{ vars.EC2_USER }}@${{ vars.EC2_HOST }}" bash -s "$VERSION_VAR" <<'EOF'
           set -e
           cd ~/deploy
+          VERSION_VAR="$1"
 
-          echo "Stopping existing containers..."
-          docker compose down --remove-orphans
+          # Map version variables to docker-compose service names
+          get_service_name() {
+            case "$1" in
+              ZAQLICK_APP_VERSION) echo "zaqlick-app" ;;
+              ZAQLICK_SOCIAL_DATA_PARSER_VERSION) echo "zaqlick-social-data-parser" ;;
+              TRAEFIK_VERSION) echo "traefik" ;;
+              *) echo "" ;;
+            esac
+          }
 
-          echo "Pulling latest images..."
-          docker compose pull
+          SERVICE_NAME=$(get_service_name "$VERSION_VAR")
 
-          echo "Starting services..."
-          docker compose up -d
+          if [ -n "$SERVICE_NAME" ]; then
+            echo "Updating only service: $SERVICE_NAME"
+            
+            echo "Pulling latest image for $SERVICE_NAME..."
+            docker compose pull "$SERVICE_NAME"
+            
+            echo "Restarting $SERVICE_NAME..."
+            docker compose up -d --no-deps --force-recreate "$SERVICE_NAME"
+          else
+            echo "No specific service to update, restarting all services..."
+            
+            echo "Stopping existing containers..."
+            docker compose down --remove-orphans
+
+            echo "Pulling latest images..."
+            docker compose pull
+
+            echo "Starting services..."
+            docker compose up -d
+          fi
 
           echo "Cleaning up unused images..."
           docker image prune -f
