--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,7 +96,7 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: prod
     volumes:
-      - ./zaqlick-app/application.yaml:/app/resources/application-prod.properties
+      - ./zaqlick-app/application.yaml:/app/resources/application-prod.yaml
 
 networks:
   web:
